# some-python

Data_Science/: pyproject.toml
Data_Science/Base_Squad/Numpy/: 1Nbasics.py
Data_Science/Base_Squad/Pandas/: 10subset.ipynb  4new_gen.ipynb  5kaggl.ipynb  6cool.ipynb  7groupby.ipynb  8time.ipynb  9onion.ipynb
Data_Science/Base_Squad/Scikit_Learn/: cross_validation.ipynb  dbscan.ipynb  encoders.ipynb  pipeline.ipynb  scaler.ipynb
Data_Science/Base_Squad/seaborn/: sea.ipynb
Data_Science/Langchain_Family/: 03paralel_chain.py  05ds_rag.py  08Scikit-scrap.ipynb  09ModernScrap.py  pyproject.toml
Data_Science/Langchain_Family/RAG/: 01ds_rag.py  02ragg.ipynb  03HtmlRag.ipynb  04Scikit-scrap.ipynb  05ModernScrap.py  06TensonFlowScrap.ipynb  07pandas_split.py  pandas_split.py  polars_split.py  scikit_split.py
Data_Science/Langchain_Family/assets/: Frankenstein.txt  scikit.html
Data_Science/Machine_Learning/Supervised/:  svm-iris.ipynb  decision_tree-KNN_iris.ipynb  decision_tree_iris.ipynb  k-nn_iris.ipynb  linear_regression.ipynb
Data_Science/Machine_Learning/Unsupervised/Topic Modeling/: 01LDA.ipynb  pyproject.toml
Data_Science/Projects/01VendasShopping/: Notebook.ipynb
Data_Science/Projects/02-Stat_série_A/: hypotesis.ipynb  statistics_1.py
Data_Science/Projects/03- Apostas_futebol/: Previsão Resultado Campeonato Brasileiro.ipynb  hack.ipynb
Data_Science/Projects/04-Titanic/: analysis.ipynb
Data_Science/Projects/04-Titanic/assets/: gender_submission.csv
Data_Science/Projects/05-Customer_segmentation/: main.ipynb
Data_Science/Projects/05-Customer_segmentation/assets/: Kmeans.ipynb
Data_Science/Projects/06-CaliforniaHouses/: main.ipynb
Data_Science/Projects/07-Salary_prediction/: main.ipynb
Data_Science/Projects/08-Wine/: wine.ipynb
Data_Science/Projects/09-cars/: stat_cars.ipynb
Data_Science/Projects/09-cars/assets/: cars2025.csv
Data_Science/Projects/S&P500/: main.ipynb
Data_Science/Small_Projects/05-Customer_segmentation/: main.ipynb
